kubernetes/gateway-deployment.yaml
# Copyright 2017 Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

##################################################################################################
# Students service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: student-service
  labels:
    app: student-service
spec:
  ports:
  - port: 8081
    name: http
  selector:
    app: student-service
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: student-v7
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: student-service
        version: v1
       
    spec:
     volumes:
     - name: cloudsql-instance-credentials
       secret:
         secretName: cloudsql-instance-credentials
     containers:
      - name: student-service
        image: gcr.io/istio-next-3/student-service:V7
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
        volumeMounts:
        - name: cloudsql-instance-credentials
          mountPath: "/etc/credentials" 
---
##################################################################################################
# Registration service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: registration-service
  labels:
    app: registration-service
spec:
  ports:
  - port: 8082
    name: http
  selector:
    app: registration-service
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: registration-v4
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: registration-service
        version: v1
    spec:
     volumes:
     - name: cloudsql-instance-credentials
       secret:
         secretName: cloudsql-instance-credentials
     containers:
      - name: registration-service
        image: gcr.io/istio-next-3/registration-service:V4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8082
        volumeMounts:
        - name: cloudsql-instance-credentials
          mountPath: "/etc/credentials" 
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: registration-v5
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: registration-service
        version: v2
    spec:
     volumes:
     - name: cloudsql-instance-credentials
       secret:
         secretName: cloudsql-instance-credentials
     containers:
      - name: registration-service
        image: gcr.io/istio-next-3/registration-service:V5
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8082
        volumeMounts:
        - name: cloudsql-instance-credentials
          mountPath: "/etc/credentials" 
---
      
##################################################################################################
# Gateway services
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gateway-service
  name: gateway-service
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: gateway-service

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gateway-v4
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gateway-service
        version: v1
    
    spec:
     volumes:
       - name: cloudsql-instance-credentials
         secret:
          secretName: cloudsql-instance-credentials
     containers:
      - name: gateway-service
        image: gcr.io/istio-next-3/gateway-service:V6
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: cloudsql-instance-credentials
          mountPath: "/etc/credentials" 
---
